--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
         "php": ">=7.3.0",
         "yiisoft/yii2": "2.0.45"
 	},
+    "autoload": {
+        "psr-4": {
+            "roms\\": "src"
+        }
+    },
     "config":{
 	    "fxp-asset": {
             "enabled": false
