--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.3.0",
-        "yiisoft/yii2": "2.0.45"
-	},
+        "yiisoft/yii2": "2.0.45",
+	"yiisoft/yii2-bootstrap4": "~2.0.0"
+    },
     "autoload": {
         "psr-4": {
             "roms\\": "src"
@@ -24,14 +25,11 @@
 	    "fxp-asset": {
             "enabled": false
         },
-		"allow-plugins": {
+    	    "allow-plugins": {
             "yiisoft/yii2-composer": true
         }
     },
     "scripts": {
-    	"post-package-install": [
-            "echo Ittt work!!!"
-        ],
         "post-install-cmd": [
             "roms\\Installer::install"
         ],
